Refactor news source lists

--- a/src/static/sass/app.scss
+++ b/src/static/sass/app.scss
@@ -1,3 +1,22 @@
-body {
-    
+// -----------------------------------------------------------------------------
+// Mixins
+//------------------------------------------------------------------------------
+@function spacer($ratio) {
+    @return $ratio * $spacer-unit;
+}
+
+// -----------------------------------------------------------------------------
+// Variables
+//------------------------------------------------------------------------------
+$spacer-unit: (12px);
+
+// -----------------------------------------------------------------------------
+// Application Stylings
+//------------------------------------------------------------------------------
+nav {
+    padding: 0 spacer(2);
+}
+
+.body-wrapper {
+    padding: spacer(3);
 }
